--- a/src/MvcTemplate.Web/Templates/Module/Objects/View.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Objects/View.cshtml
@@ -4,7 +4,7 @@ using System.ComponentModel.DataAnnotations;
 
 namespace MvcTemplate.Objects
 {
-    public class @Model.View : AView
+    public class @Model.View : AView<@Model.Model>
     {
     }
 }
