--- a/src/MvcTemplate.Web/wwwroot/css/shared/table.css
+++ b/src/MvcTemplate.Web/wwwroot/css/shared/table.css
@@ -1,26 +1,26 @@
 table .action-cell {
+    min-width: calc(1.5em + 1rem);
+    width: calc(1.5em + 1rem);
     text-align: center;
-    min-width: 36px;
-    padding: 7px;
-    width: 36px;
 }
 
 table .action-cell + .action-cell {
+    min-width: calc(1.5em + 0.5rem);
+    width: calc(1.5em + 0.5rem);
     border-left: none;
     padding-left: 0;
-    min-width: 28px;
-    width: 28px;
 }
 
 table .action-cell a {
-    transition-duration: 0.3s;
-    display: inline-block;
+    transition: transform 0.3s;
     border-radius: 4px;
-    line-height: 2.2;
-    font-size: 9px;
+    line-height: 2.5;
+    font-size: 0.5em;
+    display: block;
+    margin: 0 auto;
     color: #ffffff;
-    height: 20px;
-    width: 20px;
+    height: 2.5em;
+    width: 2.5em;
 }
 
 table .action-cell.details a {
@@ -36,6 +36,5 @@ table .action-cell.delete a {
 }
 
 table .action-cell a:hover {
-    transition-duration: 0.3s;
     transform: scale(1.2);
 }
