Readonly checkbox styling
- Made readonly checkboxes gray scaled to improve consistency across different browsers.

--- a/src/MvcTemplate.Web/wwwroot/css/shared/content.css
+++ b/src/MvcTemplate.Web/wwwroot/css/shared/content.css
@@ -76,6 +76,10 @@ body.private {
     display: none;
 }
 
+.control-content input[type="checkbox"][readonly] {
+    filter: grayscale(1);
+}
+
 .control-content input[type="checkbox"] {
     margin: 12px 0;
     height: 14px;
