Lower font size on public pages
- Lowered font on public pages as default ones doesn't fit the elements nicely.

--- a/src/MvcTemplate.Web/wwwroot/css/shared/content.css
+++ b/src/MvcTemplate.Web/wwwroot/css/shared/content.css
@@ -5,6 +5,7 @@ body {
 body.public {
     background-image: url("../../img/shared/content-background.jpg");
     background-color: #f2f2f2;
+    font-size: 0.875em;
 }
 
 body.private {
