3rd party libraries update
- Updated 3rd party libraries to their newest versions.

--- a/src/MvcTemplate.Web/Views/Shared/MvcLookup/_Dialog.cshtml
+++ b/src/MvcTemplate.Web/Views/Shared/MvcLookup/_Dialog.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="mvc-lookup-overlay">
+<div class="mvc-lookup-overlay">
     <div id="MvcLookupDialog" class="mvc-lookup-dialog">
         <div class="mvc-lookup-header">
             <span class="mvc-lookup-title"></span>
