--- a/src/MvcTemplate.Web/Views/Shared/_PublicLayout.cshtml
+++ b/src/MvcTemplate.Web/Views/Shared/_PublicLayout.cshtml
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="@Url.Content("~/favicon.ico")">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="referrer" content="strict-origin-when-cross-origin" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>@(ViewBag.Title ?? Resource.ForPage(ViewContext.RouteData.Values))</title>
