--- a/src/MvcTemplate.Web/wwwroot/css/shared/overrides.css
+++ b/src/MvcTemplate.Web/wwwroot/css/shared/overrides.css
@@ -64,7 +64,7 @@ hr {
 }
 
 .table-hover > tbody > tr:hover {
-    background-color: rgba(0, 0, 0, 0.02);
+    background-color: rgb(0 0 0 / 0.02);
 }
 
 .btn-primary {
@@ -150,7 +150,7 @@ hr {
 
 .rd-day-prev-month,
 .rd-day-next-month {
-    color: rgba(0, 0, 0, 0.1);
+    color: rgb(0 0 0 / 0.1);
 }
 
 .rd-time {
@@ -176,21 +176,21 @@ hr {
 
 .mvc-lookup-readonly .mvc-lookup-browser:focus,
 .mvc-lookup-readonly.mvc-lookup-focus .mvc-lookup-control {
-    box-shadow: 0 0 0 0.2rem rgba(154, 149, 150, 0.25);
+    box-shadow: 0 0 0 0.2rem rgb(154 149 150 / 0.25);
     border-color: #ced4da;
     outline: none;
 }
 
 .mvc-lookup-browser:focus,
 .mvc-lookup-focus .mvc-lookup-control {
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+    box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 0.25);
     border-color: #80bdff;
     outline: none;
 }
 
 .mvc-lookup-rows:focus,
 .mvc-lookup-search:focus {
-    box-shadow: 0 0 0 0.1rem rgba(0, 123, 255, 0.25);
+    box-shadow: 0 0 0 0.1rem rgb(0 123 255 / 0.25);
     border-color: #80bdff;
     position: relative;
     outline: none;
@@ -198,7 +198,7 @@ hr {
 
 .mvc-lookup-browser:focus.input-validation-error,
 .mvc-lookup-focus .mvc-lookup-control.input-validation-error {
-    box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
+    box-shadow: 0 0 0 0.2rem rgb(220 53 69 / 0.25);
     border-color: #dc3545;
 }
 
@@ -250,7 +250,7 @@ hr {
 
 .mvc-grid-filter:focus,
 .mvc-grid-filter:hover {
-    background: rgba(0, 0, 0, 0.03);
+    background: rgb(0 0 0 / 0.03);
 }
 
 .mvc-grid-pager .active {
