--- a/src/MvcTemplate.Web/wwwroot/css/shared/widget-box.css
+++ b/src/MvcTemplate.Web/wwwroot/css/shared/widget-box.css
@@ -1,5 +1,5 @@
 .widget-box {
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.33);
+    box-shadow: 0 1px 3px rgb(0 0 0 / 0.33);
     background-color: #fafafa;
     border: 1px solid #cdcdcd;
     margin-bottom: 15px;
