--- a/src/MvcTemplate.Web/Views/Shared/_PrivateLayout.cshtml
+++ b/src/MvcTemplate.Web/Views/Shared/_PrivateLayout.cshtml
@@ -89,7 +89,7 @@
             <div class="breadcrumb">
                 @{ IAuthorization authorization = Context.RequestServices.GetRequiredService<IAuthorization>(); }
                 @{ SiteMapNode[] breadcrumb = siteMap.BreadcrumbFor(ViewContext); }
-                @{ Int64? accountId = User.Id(); }
+                @{ Int64 accountId = User.Id(); }
 
                 @for (Int32 i = 0; i < breadcrumb.Length; i++)
                 {
