--- a/src/MvcTemplate.Web/Templates/Module/Services/Service.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Services/Service.cshtml
@@ -6,7 +6,7 @@ using System.Linq;
 
 namespace MvcTemplate.Services
 {
-    public class @Model.Service : AService, @Model.IService
+    public class @Model.Service : AService
     {
         public @(Model.Service)(IUnitOfWork unitOfWork)
             : base(unitOfWork)
