--- a/src/MvcTemplate.Web/Templates/Module/Validators/Validator.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Validators/Validator.cshtml
@@ -16,7 +16,7 @@ else
 
 namespace MvcTemplate.Validators
 {
-    public class @Model.Validator : AValidator, @Model.IValidator
+    public class @Model.Validator : AValidator
     {
         public @(Model.Validator)(IUnitOfWork unitOfWork)
             : base(unitOfWork)
