--- a/src/MvcTemplate.Web/Templates/Module/Tests/ControllerTests.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Tests/ControllerTests.cshtml
@@ -1,7 +1,6 @@
 @model ModuleModel
-using Microsoft.AspNetCore.Mvc;
-using Microsoft.AspNetCore.Routing;
-using MvcTemplate.Components.Security;
+using Microsoft.EntityFrameworkCore;
+using MvcTemplate.Data;
 using MvcTemplate.Objects;
 using MvcTemplate.Services;
 using MvcTemplate.Validators;
@@ -10,162 +9,362 @@ using System;
 using System.Linq;
 using Xunit;
 
-namespace @Model.ControllerTestsNamespace
+namespace @Model.ControllerNamespace
 {
-    public class @Model.ControllerTests : ControllerTests
+    public class @Model.ControllerTests : IDisposable
     {
-        private @Model.IValidator validator;
-        private @Model.IService service;
+        private DbContext context;
+        private @Model.Model model;
+        private @Model.Model otherModel;
         private @Model.Controller controller;
-        private @Model.View @Model.ModelVarName;
 
         public @(Model.ControllerTests)()
         {
-            service = Substitute.For<@Model.IService>();
-            validator = Substitute.For<@Model.IValidator>();
-            @Model.ModelVarName = ObjectsFactory.Create@(Model.View)(0);
-            controller = Substitute.ForPartsOf<@Model.Controller>(validator, service);
+            context = TestingContext.Create();
+            UnitOfWork unitOfWork = new(TestingContext.Create(), TestingContext.Mapper);
+            controller = Substitute.ForPartsOf<@Model.Controller>(new @(Model.Validator)(unitOfWork), new @(Model.Service)(unitOfWork));
 
-            controller.Authorization.Returns(Substitute.For<IAuthorization>());
-            controller.ControllerContext.RouteData = new RouteData();
+            context.Drop().Add(model = ObjectsFactory.Create@(Model.Model)(-1));
+            context.Add(otherModel = ObjectsFactory.Create@(Model.Model)(-2));
+            context.SaveChanges();
+
+            controller.Initialize();
         }
-        public override void Dispose()
+        public void Dispose()
         {
             controller.Dispose();
-            validator.Dispose();
-            service.Dispose();
+            context.Dispose();
         }
 
         [Fact]
-        public void Index_Returns@(Model.ModelShortName)Views()
+        public void Index_@(Model.Models)()
         {
-            service.GetViews().Returns(Array.Empty<@Model.View>().AsQueryable());
+            @(Model.Model)[] expected = context.Set<@Model.Model>().OrderByDescending(@Model.ModelVarName => @(Model.ModelVarName).Id).ToArray();
+            @(Model.View)[] actual = controller.Index().Returns<IQueryable<@Model.View>>().ToArray();
 
-            Object actual = controller.Index().Model;
-            Object expected = service.GetViews();
+            for (Int32 i = 0; i < expected.Length || i < actual.Length; i++)
+            {
+@foreach (PropertyInfo property in Model.AllViewProperties.OrderByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
+{
+            if (Model.AllModelProperties.Any(prop => prop.Name == property.Name))
+            {
+                @:Assert.Equal(expected[i].@property.Name, actual[i].@property.Name);
+            }
+            else
+            {
+                @:Assert.Equal(expected[i].@(String.Join(".", Regex.Split(property.Name, "(?<=[a-z])(?=[A-Z])|(?<!^)(?=[A-Z][a-z])"))), actual[i].@property.Name);
+            }
+}
+            }
+            @if (Model.ViewProperties.Length == 0)
+            {
+            @:Assert.True(false, "Not all properties tested");
+            }
 
-            Assert.Same(expected, actual);
+            Assert.Empty(controller.ModelState);
+            Assert.Empty(controller.Alerts);
         }
 
         [Fact]
-        public void Create_ReturnsEmptyView()
+        public void Create_View()
         {
-            ViewResult actual = controller.Create();
-
-            Assert.Null(actual.Model);
+            Assert.Null(controller.Create().Model);
+            Assert.Empty(controller.ModelState);
+            Assert.Empty(controller.Alerts);
         }
 
         [Fact]
-        public void Create_CanNotCreate_ReturnsSameView()
+        public void Create_InvalidModelState_Error()
         {
-            validator.CanCreate(@Model.ModelVarName).Returns(false);
+            controller.ModelState.AddModelError("Test", "Error");
 
-            Object actual = Assert.IsType<ViewResult>(controller.Create(@Model.ModelVarName)).Model;
-            Object expected = @Model.ModelVarName;
+            controller.Returns(controller.Create, ObjectsFactory.Create@(Model.View)(model.Id));
 
-            Assert.Same(expected, actual);
+            controller.ModelState.IsSingle("Test", "Error");
+            Assert.Empty(controller.Alerts);
+        }
+        @foreach (PropertyInfo index in Model.Indexes)
+        {
+@:
+        @:[Fact]
+        @:public void Create_Used@(index.Name)_Error()
+        @:{
+        @:    @Model.View @Model.ModelVarName = ObjectsFactory.Create@(Model.View)(model.Id);
+            if (index.PropertyType == typeof(String))
+            {
+        @:    @(Model.ModelVarName).@(index.Name) = model.@(index.Name).ToUpper();
+            }
+            else
+            {
+        @:    @(Model.ModelVarName).@(index.Name) = model.@(index.Name);
+            }
+@:
+        @:    controller.Returns(controller.Create, @Model.ModelVarName);
+@:
+        @:    controller.ModelState.IsSingle<@Model.View>(nameof(@(Model.View).@(index.Name)), "Unique@(index.Name)");
+        @:    Assert.Empty(controller.Alerts);
+        @:}
         }
 
         [Fact]
         public void Create_@(Model.ModelShortName)()
         {
-            validator.CanCreate(@Model.ModelVarName).Returns(true);
+            @Model.View @Model.ModelVarName = ObjectsFactory.Create@(Model.View)(model.Id);
 
             controller.Create(@Model.ModelVarName);
 
-            service.Received().Create(@Model.ModelVarName);
+            @Model.View expected = @Model.ModelVarName;
+            @Model.Model actual = context.Db<@Model.Model>().Single(@Model.ModelVarName => @(Model.ModelVarName).Id > otherModel.Id);
+
+            @if (Model.ModelProperties.Length == 0)
+            {
+            @:Assert.True(false, "Not all properties tested");
+            }
+            else
+            {
+                foreach (PropertyInfo property in Model.AllModelProperties.Where(prop => prop.Name != "Id").OrderByDescending(prop => Model.AllViewProperties.Any(p => p.Name == prop.Name)).ThenByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
+                {
+                    if (Model.AllViewProperties.Any(prop => prop.Name == property.Name))
+                    {
+            @:Assert.Equal(expected.@property.Name, actual.@property.Name);
+                    }
+                    else
+                    {
+            @:Assert.Null(actual.@property.Name);
+                    }
+                }
+            }
         }
 
         [Fact]
-        public void Create_RedirectsToIndex()
+        public void Create_Success_Redirect()
         {
-            validator.CanCreate(@Model.ModelVarName).Returns(true);
+            Object expected = controller.StaticRedirectTo(nameof(@(Model.Controller).Index));
+            Object actual = controller.Create(ObjectsFactory.Create@(Model.View)(model.Id));
 
-            Object expected = RedirectToAction(controller, nameof(@(Model.Controller).Index));
-            Object actual = controller.Create(@Model.ModelVarName);
-
+            Assert.Empty(controller.ModelState);
+            Assert.Empty(controller.Alerts);
             Assert.Same(expected, actual);
         }
 
         [Fact]
-        public void Details_ReturnsNotEmptyView()
+        public void Details_NotFound()
         {
-            service.Get<@Model.View>(@(Model.ModelVarName).Id).Returns(@Model.ModelVarName);
+            Object expected = controller.StaticNotFoundView();
+            Object actual = controller.Details(0);
 
-            Object expected = NotEmptyView(controller, @Model.ModelVarName);
-            Object actual = controller.Details(@(Model.ModelVarName).Id);
-
+            Assert.Empty(controller.ModelState);
+            Assert.Empty(controller.Alerts);
             Assert.Same(expected, actual);
         }
 
         [Fact]
-        public void Edit_ReturnsNotEmptyView()
+        public void Details_View()
         {
-            service.Get<@Model.View>(@(Model.ModelVarName).Id).Returns(@Model.ModelVarName);
+            @Model.View actual = controller.Details(model.Id).Returns<@Model.View>();
 
-            Object expected = NotEmptyView(controller, @Model.ModelVarName);
-            Object actual = controller.Edit(@(Model.ModelVarName).Id);
+            @if (Model.ViewProperties.Length == 0)
+            {
+            @:Assert.True(false, "Not all properties tested");
+            }
+            else
+            {
+                foreach (PropertyInfo property in Model.AllViewProperties.OrderByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
+                {
+                    if (Model.AllModelProperties.Any(prop => prop.Name == property.Name))
+                    {
+            @:Assert.Equal(model.@property.Name, actual.@property.Name);
+                    }
+                    else
+                    {
+            @:Assert.Equal(model.@(String.Join(".", Regex.Split(property.Name, "(?<=[a-z])(?=[A-Z])|(?<!^)(?=[A-Z][a-z])"))), actual.@property.Name);
+                    }
+                }
+            }
+            Assert.Empty(controller.ModelState);
+            Assert.Empty(controller.Alerts);
+        }
 
+        [Fact]
+        public void Edit_NotFound()
+        {
+            Object expected = controller.StaticNotFoundView();
+            Object actual = controller.Edit(0);
+
+            Assert.Empty(controller.ModelState);
+            Assert.Empty(controller.Alerts);
             Assert.Same(expected, actual);
         }
 
         [Fact]
-        public void Edit_CanNotEdit_ReturnsSameView()
+        public void Edit_View()
         {
-            validator.CanEdit(@Model.ModelVarName).Returns(false);
+            @Model.View actual = controller.Edit(model.Id).Returns<@Model.View>();
 
-            Object actual = Assert.IsType<ViewResult>(controller.Edit(@Model.ModelVarName)).Model;
-            Object expected = @Model.ModelVarName;
+            @if (Model.ViewProperties.Length == 0)
+            {
+            @:Assert.True(false, "Not all properties tested");
+            }
+            else
+            {
+                foreach (PropertyInfo property in Model.AllViewProperties.OrderByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
+                {
+                    if (Model.AllModelProperties.Any(prop => prop.Name == property.Name))
+                    {
+            @:Assert.Equal(model.@property.Name, actual.@property.Name);
+                    }
+                    else
+                    {
+            @:Assert.Equal(model.@(String.Join(".", Regex.Split(property.Name, "(?<=[a-z])(?=[A-Z])|(?<!^)(?=[A-Z][a-z])"))), actual.@property.Name);
+                    }
+                }
+            }
+            Assert.Empty(controller.ModelState);
+            Assert.Empty(controller.Alerts);
+        }
 
-            Assert.Same(expected, actual);
+        [Fact]
+        public void Edit_InvalidModelState_Error()
+        {
+            controller.ModelState.AddModelError("Test", "Error");
+
+            controller.Returns(controller.Edit, ObjectsFactory.Create@(Model.View)(model.Id));
+
+            controller.ModelState.IsSingle("Test", "Error");
+            Assert.Empty(controller.Alerts);
+        }
+        @foreach (PropertyInfo index in Model.Indexes)
+        {
+@:
+        @:[Fact]
+        @:public void Edit_Used@(index.Name)_Error()
+        @:{
+        @:    @Model.View @Model.ModelVarName = ObjectsFactory.Create@(Model.View)(model.Id);
+            if (index.PropertyType == typeof(String))
+            {
+        @:    @(Model.ModelVarName).@(index.Name) = otherModel.@(index.Name).ToUpper();
+            }
+            else
+            {
+        @:    @(Model.ModelVarName).@(index.Name) = otherModel.@(index.Name);
+            }
+@:
+        @:    controller.Returns(controller.Edit, @Model.ModelVarName);
+@:
+        @:    controller.ModelState.IsSingle<@Model.View>(nameof(@(Model.View).@(index.Name)), "Unique@(index.Name)");
+        @:    Assert.Empty(controller.Alerts);
+        @:}
         }
 
         [Fact]
         public void Edit_@(Model.ModelShortName)()
         {
-            validator.CanEdit(@Model.ModelVarName).Returns(true);
+            @Model.View @Model.ModelVarName = ObjectsFactory.Create@(Model.View)(model.Id);
+            @{ IEnumerable<String> changes = Model.ViewProperties.Select(property =>
+            {
+                if (property.PropertyType == typeof(String))
+                {
+                    return $"{Model.ModelVarName}.{property.Name} = model.{property.Name} += \"Test\"";
+                }
+                if (typeof(Boolean?).IsAssignableFrom(property.PropertyType))
+                {
+                    return $"{Model.ModelVarName}.{property.Name} = model.{property.Name} = !model.{property.Name}";
+                }
+                if (typeof(DateTime?).IsAssignableFrom(property.PropertyType))
+                {
+                    return $"{Model.ModelVarName}.{property.Name} = model.{property.Name} = model.{property.Name}.AddDays(1)";
+                }
+
+                return $"{Model.ModelVarName}.{property.Name} = model.{property.Name} += 1";
+            }).OrderByDescending(change => change.Length);
+            }
+@foreach(String change in changes)
+{
+            @:@change;
+}
 
             controller.Edit(@Model.ModelVarName);
 
-            service.Received().Edit(@Model.ModelVarName);
+            @Model.Model actual = context.Db<@Model.Model>().Single(@Model.ModelVarName => @(Model.ModelVarName).Id == model.Id);
+
+            @if (Model.ModelProperties.Length == 0)
+            {
+            @:Assert.True(false, "Not all properties tested");
+            }
+            else
+            {
+                foreach (PropertyInfo property in Model.AllModelProperties.OrderByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
+                {
+            @:Assert.Equal(model.@property.Name, actual.@property.Name);
+                }
+            }
         }
 
         [Fact]
-        public void Edit_RedirectsToIndex()
+        public void Edit_Success_Redirect()
         {
-            validator.CanEdit(@Model.ModelVarName).Returns(true);
+            Object expected = controller.StaticRedirectTo(nameof(@(Model.Controller).Index));
+            Object actual = controller.Edit(ObjectsFactory.Create@(Model.View)(model.Id));
 
-            Object expected = RedirectToAction(controller, nameof(@(Model.Controller).Index));
-            Object actual = controller.Edit(@Model.ModelVarName);
-
+            Assert.Empty(controller.ModelState);
+            Assert.Empty(controller.Alerts);
             Assert.Same(expected, actual);
         }
 
         [Fact]
-        public void Delete_ReturnsNotEmptyView()
+        public void Delete_NotFound()
         {
-            service.Get<@Model.View>(@(Model.ModelVarName).Id).Returns(@Model.ModelVarName);
+            Object expected = controller.StaticNotFoundView();
+            Object actual = controller.Delete(0);
 
-            Object expected = NotEmptyView(controller, @Model.ModelVarName);
-            Object actual = controller.Delete(@(Model.ModelVarName).Id);
-
+            Assert.Empty(controller.ModelState);
+            Assert.Empty(controller.Alerts);
             Assert.Same(expected, actual);
         }
 
         [Fact]
-        public void DeleteConfirmed_Deletes@(Model.ModelShortName)()
+        public void Delete_View()
         {
-            controller.DeleteConfirmed(@(Model.ModelVarName).Id);
+            @Model.View actual = controller.Details(model.Id).Returns<@Model.View>();
 
-            service.Received().Delete(@(Model.ModelVarName).Id);
+            @if (Model.ViewProperties.Length == 0)
+            {
+            @:Assert.True(false, "Not all properties tested");
+            }
+            else
+            {
+                foreach (PropertyInfo property in Model.AllViewProperties.OrderByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
+                {
+                    if (Model.AllModelProperties.Any(prop => prop.Name == property.Name))
+                    {
+            @:Assert.Equal(model.@property.Name, actual.@property.Name);
+                    }
+                    else
+                    {
+            @:Assert.Equal(model.@(String.Join(".", Regex.Split(property.Name, "(?<=[a-z])(?=[A-Z])|(?<!^)(?=[A-Z][a-z])"))), actual.@property.Name);
+                    }
+                }
+            }
+            Assert.Empty(controller.ModelState);
+            Assert.Empty(controller.Alerts);
         }
 
         [Fact]
-        public void DeleteConfirmed_RedirectsToIndex()
+        public void DeleteConfirmed_@(Model.ModelShortName)()
         {
-            Object expected = RedirectToAction(controller, nameof(@(Model.Controller).Index));
-            Object actual = controller.DeleteConfirmed(@(Model.ModelVarName).Id);
+            controller.DeleteConfirmed(model.Id);
 
+            Assert.Single(context.Db<@Model.Model>(), @Model.ModelVarName => @(Model.ModelVarName).Id != model.Id);
+        }
+
+        [Fact]
+        public void DeleteConfirmed_Success_Redirect()
+        {
+            Object expected = controller.StaticRedirectTo(nameof(@(Model.Controller).Index));
+            Object actual = controller.DeleteConfirmed(model.Id);
+
+            Assert.Empty(controller.ModelState);
+            Assert.Empty(controller.Alerts);
             Assert.Same(expected, actual);
         }
     }
