Details permission removal
- Removed details permission, because it was never used independently from index permission.

--- a/src/MvcTemplate.Web/Templates/Module/Controllers/Controller.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Controllers/Controller.cshtml
@@ -42,6 +42,7 @@ namespace @Model.ControllerNamespace
         }
 
         [HttpGet]
+        [AuthorizeAs(nameof(Index))]
         public ActionResult Details(Int64 id)
         {
             return NotEmptyView(Service.Get<@Model.View>(id));
