Correct module generation
- Fixed, module generation generating uncompilable code.

--- a/src/MvcTemplate.Web/Templates/Module/Controllers/Controller.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Controllers/Controller.cshtml
@@ -1,5 +1,6 @@
 @model ModuleModel
 using Microsoft.AspNetCore.Mvc;
+using MvcTemplate.Components.Security;
 using MvcTemplate.Objects;
 using MvcTemplate.Services;
 using MvcTemplate.Validators;
