--- a/src/MvcTemplate.Web/wwwroot/css/shared/overrides.css
+++ b/src/MvcTemplate.Web/wwwroot/css/shared/overrides.css
@@ -174,6 +174,10 @@ hr {
     text-align: center !important;
 }
 
+.mvc-lookup-input {
+    padding: 0.375rem 0.75rem;
+}
+
 .mvc-lookup-readonly .mvc-lookup-browser:focus,
 .mvc-lookup-readonly.mvc-lookup-focus .mvc-lookup-control {
     box-shadow: 0 0 0 0.2rem rgb(154 149 150 / 0.25);
