--- a/src/MvcTemplate.Web/wwwroot/css/mvc-lookup/mvc-lookup.css
+++ b/src/MvcTemplate.Web/wwwroot/css/mvc-lookup/mvc-lookup.css
@@ -1,5 +1,5 @@
-﻿/*!
- * Mvc.Lookup 5.1.2
+/*!
+ * Mvc.Lookup 5.1.3
  *
  * Copyright © NonFactors
  *
@@ -72,7 +72,7 @@
 
 .mvc-lookup-control-loader {
     animation: mvc-lookup-spin 1s infinite linear;
-    border: 0.125em solid rgba(0, 0, 0, 0.2);
+    border: 0.125em solid rgb(0 0 0 / 0.2);
     transition: opacity 0.3s linear;
     border-top-color: #444444;
     box-sizing: border-box;
@@ -86,10 +86,10 @@
 }
 
 .mvc-lookup-control-error {
-    border: 0.0625em solid rgba(255, 0, 0, 0.5);
-    background: rgba(255, 255, 255, 0.5);
+    border: 0.0625em solid rgb(255 0 0 / 0.5);
+    background: rgb(255 255 255 / 0.5);
     transition: opacity 0.3s linear;
-    color: rgba(255, 0, 0, 0.5);
+    color: rgb(255 0 0 / 0.5);
     box-sizing: border-box;
     border-radius: 50%;
     text-align: center;
@@ -178,7 +178,7 @@
 }
 
 .mvc-lookup-overlay {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgb(0 0 0 / 0.5);
     justify-content: center;
     box-sizing: border-box;
     overflow-x: auto;
@@ -186,7 +186,7 @@
     font-size: 1rem;
     position: fixed;
     display: none;
-    z-index: 1000;
+    z-index: 1500;
     height: 100%;
     width: 100%;
     left: 0;
@@ -197,7 +197,7 @@
     height: min-content;
     min-width: 400px;
     max-width: 100%;
-    z-index: 1100;
+    z-index: 1600;
 }
 
 @media (max-width: 575px) {
@@ -207,9 +207,9 @@
 }
 
 .mvc-lookup-header {
-    border: 1px solid rgba(30, 54, 101, 0.8);
+    border: 1px solid rgb(30 54 101 / 0.8);
     border-radius: 0.25em 0.25em 0 0;
-    color: rgba(255, 255, 255, 0.8);
+    color: rgb(255 255 255 / 0.8);
     padding: 0.4em 0.6em 0.4em 1em;
     background: #4d6189;
     border-bottom: none;
@@ -227,7 +227,7 @@
 }
 
 .mvc-lookup-close {
-    color: rgba(255, 255, 255, 0.8);
+    color: rgb(255 255 255 / 0.8);
     transition: color 0.3s;
     font-weight: bold;
     background: none;
@@ -238,11 +238,11 @@
 }
 
 .mvc-lookup-close:hover {
-    color: rgba(255, 255, 255, 1);
+    color: rgb(255 255 255 / 1);
 }
 
 .mvc-lookup-body {
-    border: 1px solid rgba(30, 54, 101, 0.8);
+    border: 1px solid rgb(30 54 101 / 0.8);
     border-radius: 0 0 0.25em 0.25em;
     background: #ffffff;
     font-size: 0.875em;
@@ -282,8 +282,8 @@
 }
 
 .mvc-lookup-selector {
-    background: rgba(78, 169, 86, 0.8);
-    color: rgba(255, 255, 255, 0.9);
+    background: rgb(78 169 86 / 0.8);
+    color: rgb(255 255 255 / 0.9);
     border: 1px solid #5c9845;
     transition: color 0.3s;
     border-radius: 0.25em;
@@ -319,7 +319,7 @@
 
 .mvc-lookup-dialog-loader > span {
     animation: mvc-lookup-spin 1s infinite linear;
-    border: 0.5em solid rgba(0, 0, 0, 0.2);
+    border: 0.5em solid rgb(0 0 0 / 0.2);
     border-top-color: #444444;
 }
 
@@ -351,11 +351,11 @@
 }
 
 .mvc-lookup-table tbody tr:hover {
-    background: rgba(0, 0, 0, 0.05);
+    background: rgb(0 0 0 / 0.05);
 }
 
 .mvc-lookup-table .selected {
-    background: rgba(0, 0, 0, 0.03);
+    background: rgb(0 0 0 / 0.03);
 }
 
 .mvc-lookup-table th {
@@ -444,7 +444,7 @@
     position: absolute;
     list-style: none;
     cursor: pointer;
-    z-index: 1200;
+    z-index: 1700;
     padding: 0;
 }
 
@@ -453,7 +453,7 @@
 }
 
 .mvc-lookup-autocomplete li.active {
-    background-color: rgba(128, 189, 255, 0.15);
+    background-color: rgb(128 189 255 / 0.15);
     border: 1px solid #80bdff;
     margin: -1px;
 }
