--- a/src/MvcTemplate.Web/wwwroot/css/shared/widget-box.css
+++ b/src/MvcTemplate.Web/wwwroot/css/shared/widget-box.css
@@ -53,6 +53,10 @@
 }
 
 @media (max-width: 767px) {
+    .widget-header .widget-header-buttons .btn {
+        min-width: 3em;
+    }
+
     .widget-header .widget-header-buttons .btn > span {
         padding: 0;
     }
